# building-with-claude-capstone

./: .env.example  .gitignore  CS_Finance_Loan_Origination_Assistant.md  CS_Retail_Product_Intelligence_Platform.md  GIT_WORKFLOW.md  Michal_Kuls - Building with Claude - Exit Assessment.docx  README.md  loan_origination_assistant.py  product_platform_assistant.py  pyproject.toml  requirements.txt
data/: apex_bank_credit_policy.md  loan_processing_sop.md  retail_products.txt
data/vendor_specs/: dell_laptop_xps15_specs.md  prestige_cooker_specs.md  titan_analog_watch_specs.md
