[project]
name = "building-with-claude-capstone"
version = "0.1.0"
description = "Building with Claude capstone — Claude-powered assistants for the Finance (loan origination) and Retail (product intelligence) case studies"
readme = "README.md"
requires-python = ">=3.11,<3.13"
dependencies = [
    "anthropic>=0.112.0",
    "openai>=1.0.0",
    "voyageai>=0.3.0",
    "chromadb>=0.5.0",
    "python-dotenv>=1.0.0",
    "pydantic>=2.0.0",
    "numpy>=1.26.0",
]

[tool.uv]
package = false
